--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.13.3",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "underscore": "^1.8.3"
   }
 }
