--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "body-parser": "^1.13.3",
     "express": "^4.13.4",
     "underscore": "^1.8.3"
+  },
+  "engines": {
+    "node": "4.4.4"
   }
 }
