--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "It is test todo api",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tyson",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.4",
+    "sequelize": "^3.23.3",
+    "sqlite3": "^3.1.4",
     "underscore": "^1.8.3"
   },
   "engines": {
