--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Tyson",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.13.3",
     "express": "^4.13.4",
     "pg": "^4.4.1",
