--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Tyson",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.3.0",
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.13.3",
     "express": "^4.13.4",
     "pg": "^4.4.1",
@@ -17,8 +17,5 @@
     "sequelize": "^3.23.3",
     "sqlite3": "^3.1.4",
     "underscore": "^1.8.3"
-  },
-  "engines": {
-    "node": "4.4.4"
   }
 }
