--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Tyson",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^0.8.5",
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.13.3",
+    "crypto-js": "^3.1.5",
     "express": "^4.13.4",
+    "jsonwebtoken": "^5.0.5",
     "pg": "^4.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.23.3",
